fixed profile pages on mobile

--- a/styles.css
+++ b/styles.css
@@ -349,40 +349,22 @@ footer {
 }
 
 @media (max-width: 768px) {
-    .alternate-section,
-    .about-section,
-    .modlist-section,
-    .future-plans-section,
-    .downloads-section,
-    .credits-section {
-        display: flex;
+    .profile-container-left {
         flex-direction: column;
         align-items: center;
     }
-    .alternate-section img,
-    .about-section img,
-    .modlist-section img,
-    .future-plans-section img,
-    .downloads-section img,
-    .credits-section img {
-        width: 100%;
-        height: auto;
+
+    .profile-picture-left {
+        margin-right: 0;
+        margin-bottom: 1rem;
     }
-    .alternate-section .text,
-    .about-section .text,
-    .modlist-section .text,
-    .future-plans-section .text,
-    .downloads-section .text,
-    .credits-section .text {
+
+    .profile-details-left {
+        margin-left: 0;
         text-align: center;
-        padding: 10px;
     }
-    .alternate-section.reverse,
-    .about-section.reverse,
-    .modlist-section.reverse,
-    .future-plans-section.reverse,
-    .downloads-section.reverse,
-    .credits-section.reverse {
-        flex-direction: column;
+
+    .social-icons {
+        justify-content: center;
     }
 }
